# ssci

./: README.md
.github/workflows/: ci.yml
enclave-rpc/: .gitignore  Cargo.toml  Dockerfile  build_enclave.sh  push_for_build.sh  rust-toolchain.toml  sshd_config
enclave-rpc/src/: main.rs
securelink/: package-lock.json  package.json  tsconfig.json
securelink/cli/: connect.ts
securelink/inject/: head.js
securelink/src/: index.ts  proof.ts  session.ts  trusted_state_root.ts  verify.ts  wasm.ts
vwcrypto/: Cargo.toml  build.rs  build.sh  rust-toolchain.toml
vwcrypto/src/: helpers.rs  lib.rs  rekor.rs  types.rs
website/: index.html  styles.css
