[package]
name = "enclave-rpc"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"

[dependencies]
anyhow = "1"
aws-nitro-enclaves-nsm-api = "0.4"
axum = { version = "0.7.5", features = ["http1", "http2"] }
base64 = "0.22"
blake3 = "1"
bytes = "1"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
faster-hex = "0.9.0"
lazy_static = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23"
tokio-util = "0.7"
tokio-vsock = { version = "0.5", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
x25519-dalek = "2"
